--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,8 @@ dependencies = [
 [project.optional-dependencies]
 lint = [
     "black",
-    "flakeheaven",
     "flake8-bugbear",
+    "flake8-pyproject",
     "flake8-pytest-style",
     "mypy",
 ]
@@ -51,11 +51,9 @@ warn_unreachable = true
 [tool.black]
 line-length = 100
 
-[tool.flakeheaven.plugins]
-bugbear = ["+*"]
-pycodestyle = ["+*", "-W503", "-E501"]
-pyflakes = ["+*", "-E203", "-E266"]
-pytest-style = ["+*"]
+[tool.flake8]
+max-line-length = 100
+ignore = ["E203", "E266", "E501", "W503"]
 
 [tool.isort]
 profile = "black"
