fix: bug tracker url

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ file = "README.md"
 content-type = "text/markdown"
 
 [project.urls]
-"Bug Tracker" = "ttps://github.com/lgrobol/minibump/issues"
+"Bug Tracker" = "https://github.com/lgrobol/minibump/issues"
 "Changes" = "https://github.com/lgrobol/minibump/blob/master/CHANGELOG.md"
 "Documentation" = "https://github.com/lgrobol/minibump/blob/master/README.md"
 "Source Code" = "https://github.com/lgrobol/minibump"
