--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
               with:
                   name: artifact
                   path: dist
-            - uses: pypa/gh-action-pypi-publish@v1
+            - uses: pypa/gh-action-pypi-publish@release/v1
               with:
                   password: ${{ secrets.pypi_token }}
                   # To test: repository_url: https://test.pypi.org/legacy/
