--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,10 +41,10 @@ file = "README.md"
 content-type = "text/markdown"
 
 [project.urls]
-"Bug Tracker" = "https://github.com/lgrobol/minibump/issues"
-"Changes" = "https://github.com/lgrobol/minibump/blob/main/CHANGELOG.md"
-"Documentation" = "https://github.com/lgrobol/minibump/blob/main/README.md"
-"Source Code" = "https://github.com/lgrobol/minibump"
+"Bug Tracker" = "https://github.com/loicgrobol/minibump/issues"
+"Changes" = "https://github.com/loicgrobol/minibump/blob/main/CHANGELOG.md"
+"Documentation" = "https://github.com/loicgrobol/minibump/blob/main/README.md"
+"Source Code" = "https://github.com/loicgrobol/minibump"
 
 [project.scripts]
 minibump = "minibump.main:cli"
