--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,27 +19,27 @@ jobs:
             - name: Set up Python
               uses: actions/setup-python@v4
               with:
-                  python-version: "3.10"
+                  python-version: "3.11"
                   cache: 'pip'
                   cache-dependency-path: '**/pyproject.toml'
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip wheel setuptools
                   pip install .
-            - name: Lint with flake8
+            - name: Lint with ruff
               run: |
-                  pip install --upgrade flake8
+                  pip install --upgrade ruff
                   # stop the build if there are Python syntax errors or undefined names
-                  flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-                  # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-                  flake8 . --count --exit-zero --statistics
+                  ruff . --select=E9,F63,F7,F82 --show-source
+                  # exit-zero treats all errors as warnings.
+                  ruff . --exit-zero --statistics
     test:
         needs: lint
         runs-on: ubuntu-latest
         strategy:
             max-parallel: 4
             matrix:
-                python-version: ["3.10"]
+                python-version: ["3.11"]
         steps:
             
             - uses: actions/checkout@v4
@@ -66,7 +66,7 @@ jobs:
             - name: Install Python
               uses: actions/setup-python@v4
               with:
-                  python-version: "3.10"
+                  python-version: "3.11"
                   cache: 'pip'
                   cache-dependency-path: '**/pyproject.toml'
             - name: Install dependencies
@@ -85,14 +85,14 @@ jobs:
             - uses: actions/setup-python@v4
               name: Install Python
               with:
-                  python-version: "3.10"
+                  python-version: "3.11"
                   cache: 'pip'
                   cache-dependency-path: '**/pyproject.toml'
             - name: Install dependencies
               run: python -m pip install --upgrade pip setuptools wheel build
             - name: Build wheels
               run: python -m build --sdist
-            - uses: actions/upload-artifact@v4
+            - uses: actions/upload-artifact@v3
               with:
                   path: dist/*.tar.gz
     upload_pypi:
